# lms-app

./: alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 37d9c4896938_.py  9afd76c9462a_.py  a42417dc3448_.py  f22ff0435891_.py
backend/api/: courses.py  ml_endpoints.py  users.py
backend/api/utils/: courses.py  ml.py  users.py
backend/db/: db_setup.py
backend/db/models/: user.py
backend/pydantic_schemas/: ml.py  user.py
