[tool.poetry]
name = "lms"
version = "0.1.0"
description = ""
authors = ["bazai hassan <bazaee.hassan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.6"
fastapi = "^0.112.2"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
